ansible/templates/app-statefulset.yml
id: kiali-test-service
kind: Template
apiVersion: v1
name: Kiali Test Application
description: Deploys a deployment of the test mesh
parameters:
- name: NAME
  description: The name of the deployment
  required: true

- name: APP_NAME
  description: The name to use for the app name
  required: true

- name: APP_VERSION
  description: The version of the deployment
  value: v1

- name: IMAGE
  description: The image to use
  value: kiali/kiali-test-service:latest

objects:
- kind: StatefulSet
  apiVersion: apps/v1beta1
  metadata:
    name: ${NAME}
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: ${APP_NAME}
        app: ${APP_NAME}
        version: ${APP_VERSION}
    template:
      metadata:
        labels:
          name: ${APP_NAME}
          app: ${APP_NAME}
          version: ${APP_VERSION}
      spec:
        containers:
          - name: kiali-${NAME}-${APP_VERSION}
            image: ${IMAGE}
            imagePullPolicy: IfNotPresent
            ports:
            - containerPort: 8888
