ansible/templates/workload-deployment.yml
id: kiali-test-service
kind: Template
apiVersion: v1
name: Kiali Test Application
description: Deploys a deployment of the test mesh
parameters:
- name: NAME
  description: The name of the deployment
  required: true

- name: PROJECT_NAME
  description: The name of the project

- name: BUILD_NUMBER
  description: The build reference number
  value: 0.0.1

- name: IMAGE
  description: The image to use
  value: kiali/kiali-test-service:latest

objects:
- kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: ${NAME}
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: ${PROJECT_NAME}
        build: ${BUILD_NUMBER}
    template:
      metadata:
        labels:
          name: ${PROJECT_NAME}
          build: ${BUILD_NUMBER}
      spec:
        containers:
          - name: kiali-${PROJECT_NAME}
            image: ${IMAGE}
            imagePullPolicy: IfNotPresent
            ports:
            - containerPort: 8888
