ansible/templates/virtualservice-template.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${VIRTUAL_SERVICE_NAME}
spec:
  hosts:
  - ${VIRTUAL_SERVICE_HOST}
  http:
  - route:
    - destination:
        host: ${DESTINATION_HOST}
        subset: ${DESTINATION_SUBSET}
      weight: 100
